--- a/src/app/quiz/quiz.component.css
+++ b/src/app/quiz/quiz.component.css
@@ -1,27 +1,8 @@
-/* HeroesComponent's private CSS styles */
-.heroes {
-  margin: 0 0 2em 0;
-  list-style-type: none;
-  padding: 0;
-  width: 15em;
-}
-.heroes li {
-  position: relative;
-  cursor: pointer;
-  background-color: #EEE;
-  margin: .5em;
-  padding: .3em 0;
-  height: 1.6em;
-  border-radius: 4px;
+.jumbotron {
+  text-align: center;
 }
 
-.heroes li:hover {
-  color: #607D8B;
-  background-color: #DDD;
-  left: .1em;
-}
-
-.heroes a {
+a {
   color: #888;
   text-decoration: none;
   position: relative;
@@ -29,7 +10,7 @@
   width: 250px;
 }
 
-.heroes a:hover {
+a:hover {
   color:#607D8B;
 }
 
