--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -1,2 +1,18 @@
-<h2>Menu Test</h2>
-<p>You'll have {{quiz.time}} minutes to solve it, Good luck</p>
+<div class="jumbotron" *ngIf="quiz">
+  <h2>{{quiz.name}}</h2>
+  <p >You'll have {{quiz.time}} minutes to solve it, Good luck</p>
+</div>
+<div class="container" *ngIf="mode=='quiz' && quiz">
+  <div class="badge badge-info">Question {{currIndex + 1}} of {{quiz.questions.length}}.</div>
+  <h2>{{currIndex + 1}}. <span [innerHTML]="currQuestion.name"></span></h2>
+  <div class="row text-left options">
+    <div class="col-md-6" *ngFor="let option of currQuestion.answers">
+      <div class="option">
+        <label class="" [attr.for]="option.id">
+          <input id="{{option.id}}" type="checkbox" [(ngModel)]="option.selected" (change)="onSelect(currQuestion, option);" />
+          {{option.name}}
+        </label>
+      </div>
+    </div>
+  </div>
+</div>
