--- a/src/app/quiz/quiz.component.css
+++ b/src/app/quiz/quiz.component.css
@@ -2,19 +2,11 @@
   text-align: center;
 }
 
-a {
-  color: #888;
-  text-decoration: none;
-  position: relative;
-  display: block;
-  width: 250px;
-}
-
 a:hover {
   color:#607D8B;
 }
 
-.heroes .badge {
+.badge {
   display: inline-block;
   font-size: small;
   color: white;
