--- a/src/app/quiz-review/quiz-review.component.css
+++ b/src/app/quiz-review/quiz-review.component.css
@@ -1,6 +1,6 @@
 .answered {
-  background-color:#ccffcc;
-  border:1px solid #aaeeaa;
+  background-color:#039be5;
+  border:1px solid #039be5;
   margin:2px 0;
   padding:12px;
 }
