--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -10,7 +10,7 @@
     <div class="col-md-6" *ngFor="let answer of getCurrQuestion().answers">
       <div class="option">
         <label class="" [attr.for]="answer.id">
-          <input id="{{answer.id}}" type="checkbox" [(ngModel)]="answer.selected"/>
+          <input id="{{answer.id}}" type="checkbox" (change)="onSelect(currIndex +1)" [(ngModel)]="answer.selected"/>
           {{answer.name}}
         </label>
       </div>
