--- a/src/app/quiz-review/quiz-review.component.html
+++ b/src/app/quiz-review/quiz-review.component.html
@@ -8,4 +8,10 @@
       </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-sm-4 offset-sm-4">
+      <button class="btn btn-lg btn-primary">Submit</button> <br>
+        <small>Click on a question to view it</small>
+    </div>
+  </div>
 </div>
