--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -1,9 +1,11 @@
-<div class="jumbotron" *ngIf="quiz">
-  <h2>
-    <small *ngIf="quiz.isPreview"><i>PREVIEW MODE OF:</i></small>
-    {{quiz.name}}
-  </h2>
-  <p >You'll have {{quiz.time}} minutes to solve it, minimum score is {{quiz.scoreToPass}}, Good luck</p>
+<div class="jumbotron">
+  <div *ngIf="quiz">
+    <h2>
+      <small *ngIf="quiz.isPreview"><i>PREVIEW MODE OF:</i></small>
+      {{quiz.name}}
+    </h2>
+    <p >You'll have {{quiz.time}} minutes to solve it, minimum score is {{quiz.scoreToPass}}, Good luck</p>
+  </div>
   <a href="/" class="btn btn-primary">Back to dashboard</a>
 </div>
 <div class="container" *ngIf="mode == 'quiz' && quiz">
@@ -11,7 +13,7 @@
   <h2>{{currIndex + 1}}. <span [innerHTML]="getCurrQuestion().name"></span></h2>
   <div class="row">
     <div class="col-md-6" *ngFor="let answer of getCurrQuestion().answers">
-      <div class="option"> 
+      <div class="option">
         <label class="" [attr.for]="answer.id">
           <input id="{{answer.id}}" type="checkbox" [(ngModel)]="answer.selected"/>
           {{answer.name}}
@@ -33,3 +35,5 @@
 
 <app-quiz-review [quiz]="quiz" (showQuestion)="showQuestion($event)"
                  *ngIf="mode == 'review' && quiz"></app-quiz-review>
+
+<h1 *ngIf="errMsg">{{errMsg}}</h1>
