--- a/src/app/quiz/quiz.component.css
+++ b/src/app/quiz/quiz.component.css
@@ -44,3 +44,11 @@ button.delete {
   background-color: gray !important;
   color: white;
 }
+
+.approved {
+ color: green;
+}
+
+.rejected {
+  color: red;
+}
