--- a/src/app/quiz-creator/quiz-creator.component.css
+++ b/src/app/quiz-creator/quiz-creator.component.css
@@ -1,22 +1,38 @@
-hr{
-  border-color: darkblue;
-  border-width: 20px;
+.panel {
+  border: 1px solid rgb(96, 125, 139);
+  border-radius:0 !important;
+  transition: box-shadow 0.5s;
 }
-#message {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  margin-top: 50px;
+.panel:hover {
+  box-shadow: 5px 0px 40px rgba(0,0,0, .2);
 }
-.inner-message {
-  margin: 0 auto;
-  opacity: 0.7;
+.panel-footer .btn:hover {
+  border: 1px solid lightsteelblue;
+  background-color: #fff !important;
+  color: rgb(96, 125, 139);
 }
-.existing {
-  background-color: antiquewhite !important;
+.panel-heading {
+  color: #fff !important;
+  background-color: rgb(96, 125, 139) !important;
+  padding: 25px;
+  border-bottom: 1px solid transparent;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
 }
-
-h3 {
-  margin-bottom: 50px;
+.panel-footer {
+  background-color: white !important;
+}
+.panel-footer h3 {
+  font-size: 32px;
+}
+.panel-footer h4 {
+  color: #aaa;
+  font-size: 14px;
+}
+.panel-footer .btn {
+  margin: 15px 0;
+  background-color: rgb(96, 125, 139);
+  color: #fff;
 }
