--- a/src/app/quiz-creator/quiz-creator.component.html
+++ b/src/app/quiz-creator/quiz-creator.component.html
@@ -1,38 +1,24 @@
-<div class="container" style="margin-top: 30px">
-  <div id="message">
-    <div style="padding: 5px;">
-      <div class="alert alert-success inner-message"  *ngIf="successMessage">
-        <strong>Success!</strong> {{ successMessage }}
+<div class="jumbotron">
+  <h2>{{businessName}} Quiz Creator</h2>
+</div>
+
+<div class="container-fluid" *ngIf="roles">
+  <div class="text-center">
+    <h4>Pick role</h4>
+  </div>
+  <div class="row">
+    <div class="col-sm-4 col-xs-12" *ngFor="let role of roles">
+      <div class="panel panel-default text-center">
+        <div class="panel-heading">
+          <h1>{{role.name}}</h1>
+        </div>
+        <div class="panel-body">
+          <img [src]="role.imageUrl">
+        </div>
+        <div class="panel-footer">
+          <button class="btn btn-primary" (click)="gotoQuiz(role.name)">Create</button>
+        </div>
       </div>
-      <div class="alert alert-danger inner-message"  *ngIf="errorMessage">
-        <strong>Error!</strong> {{ errorMessage }}
-      </div>
     </div>
   </div>
-  <div class="page-header"><h1>Quiz Creator</h1></div>
-  <div class="jumbotron">
-    <div class="row">
-      <h3>Create Quiz</h3>
-      <small *ngIf="existingEvents">Currently {{ getQuizCnt() }} quizzes</small>
-      <form class="form-horizontal">
-        <app-quiz-details [quiz]="newQuiz" (refreshNeeded)="getQuizzes()"
-                       (generateErrorMessage)="setErrorMessage($event)"></app-quiz-details>
-      </form>
-    </div>
-
-  </div>
-
-  <hr>
-
-  <div class="jumbotron existing" *ngFor="let existingQuiz of existingQuizzes">
-    <div class="row">
-      <h3>{{ existingQuiz.name }}</h3>
-      <form class="form-horizontal">
-        <app-quiz-details [quiz]="existingQuiz" (refreshNeeded)="getQuizzes()"
-                       (generateSuccessMessage)="setSuccessMessage($event)"
-                       (generateErrorMessage)="setErrorMessage($event)"></app-quiz-details>
-      </form>
-    </div>
-  </div>
-
 </div>
