--- a/src/app/question-details/question-details.component.html
+++ b/src/app/question-details/question-details.component.html
@@ -1,6 +1,7 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <h5 class="panel-title" style="display: inline">{{ question.name }}</h5>
+    <button class="btn-info" (click)="showQuestion()">Edit</button>
   </div>
   <div class="panel-body">
     <div class="row">
