--- a/src/app/quiz-role-creator/quiz-role-creator.component.html
+++ b/src/app/quiz-role-creator/quiz-role-creator.component.html
@@ -1,4 +1,14 @@
 <div class="container" *ngIf="quiz">
+  <div id="message">
+    <div style="padding: 5px;">
+      <div class="alert alert-success inner-message"  *ngIf="successMessage">
+        <strong>Success!</strong> {{ successMessage }}
+      </div>
+      <div class="alert alert-danger inner-message"  *ngIf="errorMessage">
+        <strong>Error!</strong> {{ errorMessage }}
+      </div>
+    </div>
+  </div>
   <div class="page-header"><h1>Create {{role}} menu test</h1></div>
   <div class="jumbotron">
     <div class="row">
@@ -26,7 +36,7 @@
           </div>
           <div class="form-group row">
             <div class="col-sm-4 offset-sm-4">
-              <button class="btn btn-lg btn-primary">Save</button>
+              <button class="btn btn-lg btn-primary" (click)="updateBasicConfig()">Save</button>
             </div>
           </div>
         </form>
@@ -75,7 +85,7 @@
 <div class="container" *ngIf="quiz">
   <div class="row" style="margin-top: 20px">
     <div class="col-md-6" *ngFor="let question of quiz.questions">
-      <app-question-details [question]="question" (click)="setNewQuestion(question)"></app-question-details>
+      <app-question-details [question]="question" (emitQuestion)="setNewQuestion($event)"></app-question-details>
     </div>
   </div>
 </div>
