--- a/src/app/question-details/question-details.component.html
+++ b/src/app/question-details/question-details.component.html
@@ -1,8 +1,12 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <h5 class="panel-title" style="display: inline">{{ question.name }}</h5>
-    <button class="btn btn-info btn-sm" (click)="showQuestion()">Edit</button>
-    <button class="btn btn-default btn-sm" (click)="toggleAnswers()">Show answers</button>
+    <button class="btn btn-info btn-sm" (click)="showQuestion()">
+      <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+    </button>
+    <button class="btn btn-default btn-sm" (click)="toggleAnswers()">
+      <i class="fa fa-chevron-down" aria-hidden="true"></i>
+    </button>
   </div>
   <div class="panel-body" *ngIf="showAnswers">
     <table class="table">
