--- a/src/app/quiz-creator/quiz-creator.component.html
+++ b/src/app/quiz-creator/quiz-creator.component.html
@@ -1,24 +1,10 @@
 <div class="jumbotron">
   <h2>{{businessName}} Quiz Creator</h2>
+  <div class="btn-group">
+    <a *ngFor="let role of roles" [routerLink]="role.name"><button class="btn btn-primary"
+            >{{role.name}}</button></a>
+  </div>
 </div>
 
-<div class="container-fluid" *ngIf="roles">
-  <div class="text-center">
-    <h4>Pick role</h4>
-  </div>
-  <div class="row">
-    <div class="col-sm-4 col-xs-12" *ngFor="let role of roles">
-      <div class="panel panel-default text-center">
-        <div class="panel-heading">
-          <h1>{{role.name}}</h1>
-        </div>
-        <div class="panel-body">
-          <img [src]="role.imageUrl">
-        </div>
-        <div class="panel-footer">
-          <button class="btn btn-primary" (click)="gotoQuiz(role.name)">Create</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+
+<router-outlet></router-outlet>
