--- a/src/app/quiz-creator/quiz-creator.component.css
+++ b/src/app/quiz-creator/quiz-creator.component.css
@@ -37,13 +37,6 @@
   color: #fff;
 }
 
-.sidenav {
-  width: 130px;
-  position: fixed;
-  z-index: 1;
-  top: 180px;
-  left: 10px;
-  /*background: #eee;*/
-  overflow-x: hidden;
-  padding: 8px 0;
+.btn-primary {
+  margin-right: 10px;
 }
