--- a/src/app/quiz-role-creator/quiz-role-creator.component.html
+++ b/src/app/quiz-role-creator/quiz-role-creator.component.html
@@ -36,7 +36,7 @@
           </div>
           <div class="form-group row">
             <div class="col-sm-4 offset-sm-4">
-              <button class="btn btn-lg btn-primary" (click)="updateBasicConfig()">Save</button>
+              <button class="btn btn-primary" (click)="updateBasicConfig()">Save</button>
             </div>
           </div>
         </form>
@@ -73,7 +73,7 @@
 
           <div class="form-group row">
             <div class="col-sm-4 offset-sm-4">
-              <button class="btn btn-lg btn-primary">Save</button>
+              <button class="btn btn-primary" (click)="updateQuestion()">Save</button>
             </div>
           </div>
         </form>
