--- a/src/app/quiz-role-creator/quiz-role-creator.component.html
+++ b/src/app/quiz-role-creator/quiz-role-creator.component.html
@@ -36,7 +36,7 @@
           </div>
           <div class="form-group row">
             <div class="col-sm-4 offset-sm-4">
-              <button class="btn btn-primary" (click)="updateBasicConfig()">Save</button>
+              <button class="btn btn-info" (click)="updateBasicConfig()">Save</button>
             </div>
           </div>
         </form>
@@ -73,7 +73,10 @@
 
           <div class="form-group row">
             <div class="col-sm-4 offset-sm-4">
-              <button class="btn btn-primary" (click)="updateQuestion()">Save</button>
+              <div class="btn-group">
+                <button class="btn btn-info" (click)="updateQuestion()">Save</button>
+                <button class="btn btn-success" (click)="resetQuestion()">New</button>
+              </div>
             </div>
           </div>
         </form>
@@ -85,7 +88,10 @@
 <div class="container" *ngIf="quiz">
   <div class="row" style="margin-top: 20px">
     <div class="col-md-6" *ngFor="let question of quiz.questions">
-      <app-question-details [question]="question" (emitQuestion)="setNewQuestion($event)"></app-question-details>
+      <app-question-details [question]="question"
+                            (emitQuestion)="setNewQuestion($event)"
+                            (deleteQuestionEmitter)="deleteQuestion($event)">
+      </app-question-details>
     </div>
   </div>
 </div>
