--- a/src/app/quiz-creator/quiz-creator.component.html
+++ b/src/app/quiz-creator/quiz-creator.component.html
@@ -4,6 +4,8 @@
     <a *ngFor="let role of roles" [routerLink]="role.name"><button class="btn btn-primary"
             >{{role.name}}</button></a>
   </div>
+  <a href="/" class="btn btn-info pull-right">Back to dashboard</a>
+  <a href="/menu/test" class="btn btn-info pull-right">Preview quiz</a>
 </div>
 
 
